--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand ps-4" href="index.html">LOOM</a>
+            <a class="navbar-brand ps-4" href="../index.html">LOOM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="index.html">Inicio</a>
-                    <a class="nav-link" href="web/mujer.html">Mujer</a>
-                    <a class="nav-link" href="web/hombre.html">Hombre</a>
-                    <a class="nav-link" href="web/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="../web/mujer.html">Mujer</a>
+                    <a class="nav-link" href="../web/hombre.html">Hombre</a>
+                    <a class="nav-link" href="../web/contacto.html">Contacto</a>
                 </div>
             </div>
             <i class="fa-solid fa-cart-shopping" onclick="mostrarCarrito()"></i>
