cambio a rutas relativas

--- a/web/mujer.html
+++ b/web/mujer.html
@@ -16,24 +16,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/estilos/style.css">
+    <link rel="stylesheet" href="../estilos/style.css">
     <title>Loom</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand ps-4" href="/index.html">LOOM</a>
+            <a class="navbar-brand ps-4" href="../index.html">LOOM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="/index.html
+                    <a class="nav-link" href="../index.html
                     ">Inicio</a>
-                    <a class="nav-link" href="/web/mujer.html">Mujer</a>
-                    <a class="nav-link" href="/web/hombre.html">Hombre</a>
-                    <a class="nav-link" href="/web/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../web/mujer.html">Mujer</a>
+                    <a class="nav-link" href="../web/hombre.html">Hombre</a>
+                    <a class="nav-link" href="../web/contacto.html">Contacto</a>
                 </div>
             </div>
             <i class="fa-solid fa-cart-shopping" onclick="mostrarCarrito()"></i>
@@ -57,7 +57,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/jersey-blanco.png" class="card-img-top" alt="Jersey de lana blanco">
+                <img src="../img/jersey-blanco.png" class="card-img-top" alt="Jersey de lana blanco">
                 <div class="card-body">
                     <h5 class="card-title">Jersey de lana blanco</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/jersey-burdeos.png" class="card-img-top" alt="Jersey de lana burdeos">
+                <img src="../img/jersey-burdeos.png" class="card-img-top" alt="Jersey de lana burdeos">
                 <div class="card-body">
                     <h5 class="card-title">Jersey de lana burdeos</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -77,7 +77,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/jersey-gris.png" class="card-img-top" alt="Jersey de lana gris">
+                <img src="../img/jersey-gris.png" class="card-img-top" alt="Jersey de lana gris">
                 <div class="card-body">
                     <h5 class="card-title">Jersey de lana gris</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -91,7 +91,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/pantalon-Beige-mujer.png" class="card-img-top" alt="Pantalón beige">
+                <img src="../img/pantalon-Beige-mujer.png" class="card-img-top" alt="Pantalón beige">
                 <div class="card-body">
                     <h5 class="card-title">Pantalón beige</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -101,7 +101,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/pantalon-marron-mujer.png" class="card-img-top" alt="Pantalón de pana marrón">
+                <img src="../img/pantalon-marron-mujer.png" class="card-img-top" alt="Pantalón de pana marrón">
                 <div class="card-body">
                     <h5 class="card-title">Pantalón de pana marrón</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/pantalon-negro-mujer.png" class="card-img-top" alt="Pantalón de traje negro">
+                <img src="../img/pantalon-negro-mujer.png" class="card-img-top" alt="Pantalón de traje negro">
                 <div class="card-body">
                     <h5 class="card-title">Pantalón de traje negro</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -125,7 +125,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/vestido-gris.png" class="card-img-top" alt="Vestido de lana gris">
+                <img src="../img/vestido-gris.png" class="card-img-top" alt="Vestido de lana gris">
                 <div class="card-body">
                     <h5 class="card-title">Vestido de lana gris</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -135,7 +135,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/vestido-marron.png" class="card-img-top" alt="Vestido marrón">
+                <img src="../img/vestido-marron.png" class="card-img-top" alt="Vestido marrón">
                 <div class="card-body">
                     <h5 class="card-title">Vestido marrón</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -145,7 +145,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/vestido-granate.png" class="card-img-top" alt="Vestido de lana burdeos">
+                <img src="../img/vestido-granate.png" class="card-img-top" alt="Vestido de lana burdeos">
                 <div class="card-body">
                     <h5 class="card-title">Vestido de lana burdeos</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -159,7 +159,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/botas-negras.png" class="card-img-top" alt="Botas de piel negras">
+                <img src="../img/botas-negras.png" class="card-img-top" alt="Botas de piel negras">
                 <div class="card-body">
                     <h5 class="card-title">Botas de piel negras</h5>
                     <p class="card-text">Talla 36-43</p>
@@ -169,7 +169,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/botas-cowboy.png" class="card-img-top" alt="Botas cowboy marrones">
+                <img src="../img/botas-cowboy.png" class="card-img-top" alt="Botas cowboy marrones">
                 <div class="card-body">
                     <h5 class="card-title">Botas cowboy marrones</h5>
                     <p class="card-text">Talla 36-43</p>
@@ -179,7 +179,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/botas-marrones.png" class="card-img-top" alt="Botas de ante marrones">
+                <img src="../img/botas-marrones.png" class="card-img-top" alt="Botas de ante marrones">
                 <div class="card-body">
                     <h5 class="card-title">Botas de ante marrones</h5>
                     <p class="card-text">Talla 36-43</p>
@@ -193,7 +193,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/deportivas-mujer-gris.png" class="card-img-top" alt="Deportivas grises">
+                <img src="../img/deportivas-mujer-gris.png" class="card-img-top" alt="Deportivas grises">
                 <div class="card-body">
                     <h5 class="card-title">Deportivas grises</h5>
                     <p class="card-text">Talla 36-43</p>
@@ -203,7 +203,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/deportiva-mujer-colores.png" class="card-img-top" alt="Deportivas de colores">
+                <img src="../img/deportiva-mujer-colores.png" class="card-img-top" alt="Deportivas de colores">
                 <div class="card-body">
                     <h5 class="card-title">Deportivas de colores</h5>
                     <p class="card-text">Talla 36-43</p>
@@ -213,7 +213,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/deportivas-mujer-negras.png" class="card-img-top" alt="Deportivas negras">
+                <img src="../img/deportivas-mujer-negras.png" class="card-img-top" alt="Deportivas negras">
                 <div class="card-body">
                     <h5 class="card-title">Deportivas negras</h5>
                     <p class="card-text">Talla 36-43</p>
@@ -227,7 +227,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/cinturon-marron-mujer.png" class="card-img-top" alt="Cinturón de piel marrón">
+                <img src="..../img/cinturon-marron-mujer.png" class="card-img-top" alt="Cinturón de piel marrón">
                 <div class="card-body">
                     <h5 class="card-title">Cinturón de piel marrón</h5>
                     <p class="card-text">Talla 32-54</p>
@@ -237,7 +237,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/cinturon-negro-mujer.png" class="card-img-top" alt="Cinturón de piel negro">
+                <img src="..../img/cinturon-negro-mujer.png" class="card-img-top" alt="Cinturón de piel negro">
                 <div class="card-body">
                     <h5 class="card-title">Cinturón de piel negro</h5>
                     <p class="card-text">Talla 32-54</p>
@@ -247,7 +247,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/cinturon-granate-mujer.png" class="card-img-top" alt="Cinturón de piel rojo">
+                <img src="..../img/cinturon-granate-mujer.png" class="card-img-top" alt="Cinturón de piel rojo">
                 <div class="card-body">
                     <h5 class="card-title">Cinturón de piel rojo</h5>
                     <p class="card-text">Talla 32-54</p>
@@ -261,7 +261,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/bolso-negro.png" class="card-img-top" alt="Bolso de ante negro">
+                <img src="../img/bolso-negro.png" class="card-img-top" alt="Bolso de ante negro">
                 <div class="card-body">
                     <h5 class="card-title">Bolso de ante negro</h5>
                     <p class="card-text">Talla M</p>
@@ -271,7 +271,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/bolso-marron.png" class="card-img-top" alt="Bolso de piel marrón">
+                <img src="../img/bolso-marron.png" class="card-img-top" alt="Bolso de piel marrón">
                 <div class="card-body">
                     <h5 class="card-title">Bolso de piel marrón</h5>
                     <p class="card-text">Talla L</p>
@@ -281,7 +281,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/bolso-marron-claro.png" class="card-img-top" alt="Bolso de piel beige">
+                <img src="../img/bolso-marron-claro.png" class="card-img-top" alt="Bolso de piel beige">
                 <div class="card-body">
                     <h5 class="card-title">Bolso de piel beige</h5>
                     <p class="card-text">Talla M</p>
@@ -341,6 +341,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script src="/js/carrito.js"></script>
+    <script src="../js/carrito.js"></script>
 </body>
 </html>
