cambio a rutas relativas

--- a/web/mujer.html
+++ b/web/mujer.html
@@ -227,7 +227,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="..../img/cinturon-marron-mujer.png" class="card-img-top" alt="Cinturón de piel marrón">
+                <img src="../img/cinturon-marron-mujer.png" class="card-img-top" alt="Cinturón de piel marrón">
                 <div class="card-body">
                     <h5 class="card-title">Cinturón de piel marrón</h5>
                     <p class="card-text">Talla 32-54</p>
@@ -237,7 +237,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="..../img/cinturon-negro-mujer.png" class="card-img-top" alt="Cinturón de piel negro">
+                <img src="../img/cinturon-negro-mujer.png" class="card-img-top" alt="Cinturón de piel negro">
                 <div class="card-body">
                     <h5 class="card-title">Cinturón de piel negro</h5>
                     <p class="card-text">Talla 32-54</p>
@@ -247,7 +247,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="..../img/cinturon-granate-mujer.png" class="card-img-top" alt="Cinturón de piel rojo">
+                <img src="../img/cinturon-granate-mujer.png" class="card-img-top" alt="Cinturón de piel rojo">
                 <div class="card-body">
                     <h5 class="card-title">Cinturón de piel rojo</h5>
                     <p class="card-text">Talla 32-54</p>
