cambio a rutas relativas

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="index.html">Inicio</a>
                     <a class="nav-link" href="web/mujer.html">Mujer</a>
-                    <a class="nav-link" href="../web/hombre.html">Hombre</a>
-                    <a class="nav-link" href="../web/contacto.html">Contacto</a>
+                    <a class="nav-link" href="web/hombre.html">Hombre</a>
+                    <a class="nav-link" href="web/contacto.html">Contacto</a>
                 </div>
             </div>
             <i class="fa-solid fa-cart-shopping" onclick="mostrarCarrito()"></i>
