--- a/web/hombre.html
+++ b/web/hombre.html
@@ -16,24 +16,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/estilos/style.css">
+    <link rel="stylesheet" href="../estilos/style.css">
     <title>Loom</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand ps-4" href="/index.html">LOOM</a>
+            <a class="navbar-brand ps-4" href="../index.html">LOOM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="/index.html
+                    <a class="nav-link" href="../index.html
                     ">Inicio</a>
-                    <a class="nav-link" href="/web/mujer.html">Mujer</a>
-                    <a class="nav-link" href="/web/hombre.html">Hombre</a>
-                    <a class="nav-link" href="/web/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../web/mujer.html">Mujer</a>
+                    <a class="nav-link" href="../web/hombre.html">Hombre</a>
+                    <a class="nav-link" href="../web/contacto.html">Contacto</a>
                 </div>
             </div>
             <i class="fa-solid fa-cart-shopping" onclick="mostrarCarrito()"></i>
@@ -57,7 +57,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/camisa-vaquera.png" class="card-img-top" alt="Camisa vaquera">
+                <img src="../img/camisa-vaquera.png" class="card-img-top" alt="Camisa vaquera">
                 <div class="card-body">
                     <h5 class="card-title">Camisa vaquera</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/camisa-negra.png" class="card-img-top" alt="Camisa negra">
+                <img src="../img/camisa-negra.png" class="card-img-top" alt="Camisa negra">
                 <div class="card-body">
                     <h5 class="card-title">Camisa negra</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -77,7 +77,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/camisa-azul.png" class="card-img-top" alt="Camisa azul">
+                <img src="../img/camisa-azul.png" class="card-img-top" alt="Camisa azul">
                 <div class="card-body">
                     <h5 class="card-title">Camisa azul</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -91,7 +91,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/pantalon-negro-hombre.png" class="card-img-top" alt="Pantalón de traje negro">
+                <img src="../img/pantalon-negro-hombre.png" class="card-img-top" alt="Pantalón de traje negro">
                 <div class="card-body">
                     <h5 class="card-title">Pantalón de traje negro</h5>
                     <p class="card-text">Talla 36-48</p>
@@ -101,7 +101,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/pantalon-marron-hombre.png" class="card-img-top" alt="Pantalón chino marrón">
+                <img src="../img/pantalon-marron-hombre.png" class="card-img-top" alt="Pantalón chino marrón">
                 <div class="card-body">
                     <h5 class="card-title">Pantalón chino marrón</h5>
                     <p class="card-text">Talla 36-48</p>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/pantalon-gris-hombre.png" class="card-img-top" alt="Pantalón de traje gris">
+                <img src="../img/pantalon-gris-hombre.png" class="card-img-top" alt="Pantalón de traje gris">
                 <div class="card-body">
                     <h5 class="card-title">Pantalón de traje gris</h5>
                     <p class="card-text">Talla 36-48</p>
@@ -125,7 +125,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/abrigo-marron-hombre.png" class="card-img-top" alt="Abrigo de paño marrón">
+                <img src="../img/abrigo-marron-hombre.png" class="card-img-top" alt="Abrigo de paño marrón">
                 <div class="card-body">
                     <h5 class="card-title">Abrigo de paño marrón</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -135,7 +135,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/abrigo-gris-hombre.png" class="card-img-top" alt="Abrigo de paño gris">
+                <img src="../img/abrigo-gris-hombre.png" class="card-img-top" alt="Abrigo de paño gris">
                 <div class="card-body">
                     <h5 class="card-title">Abrigo de paño gris</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -145,7 +145,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/abrigo-negro-hombre.png" class="card-img-top" alt="Abrigo de paño negro">
+                <img src="../img/abrigo-negro-hombre.png" class="card-img-top" alt="Abrigo de paño negro">
                 <div class="card-body">
                     <h5 class="card-title">Abrigo de paño negro</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -159,7 +159,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/zapato-negro.png" class="card-img-top" alt="Zapato de vestir negro">
+                <img src="../img/zapato-negro.png" class="card-img-top" alt="Zapato de vestir negro">
                 <div class="card-body">
                     <h5 class="card-title">Zapato de vestir negro</h5>
                     <p class="card-text">Talla 30-47</p>
@@ -169,7 +169,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/zapato-marron.png" class="card-img-top" alt="Zapato de vestir marrón">
+                <img src="../img/zapato-marron.png" class="card-img-top" alt="Zapato de vestir marrón">
                 <div class="card-body">
                     <h5 class="card-title">Zapato de vestir marrón</h5>
                     <p class="card-text">Talla 40-47</p>
@@ -179,7 +179,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/zapato-marron-claro.png" class="card-img-top" alt="Zapato de ante marrón">
+                <img src="../img/zapato-marron-claro.png" class="card-img-top" alt="Zapato de ante marrón">
                 <div class="card-body">
                     <h5 class="card-title">Zapato de ante marrón</h5>
                     <p class="card-text">Talla 40-47</p>
@@ -193,7 +193,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/deportiva-negra-hombre.png" class="card-img-top" alt="Deportivas negras">
+                <img src="../img/deportiva-negra-hombre.png" class="card-img-top" alt="Deportivas negras">
                 <div class="card-body">
                     <h5 class="card-title">Deportivas negras</h5>
                     <p class="card-text">Talla 40-47</p>
@@ -203,7 +203,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/deportiva-marron-hombre.png" class="card-img-top" alt="Deportivas marrones">
+                <img src="../img/deportiva-marron-hombre.png" class="card-img-top" alt="Deportivas marrones">
                 <div class="card-body">
                     <h5 class="card-title">Deportivas marrones</h5>
                     <p class="card-text">Talla 40-47</p>
@@ -213,7 +213,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/deportiva-azul-hombre.png" class="card-img-top" alt="Deportivas azules">
+                <img src="../img/deportiva-azul-hombre.png" class="card-img-top" alt="Deportivas azules">
                 <div class="card-body">
                     <h5 class="card-title">Deportivas azules</h5>
                     <p class="card-text">Talla 40-47</p>
@@ -227,7 +227,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/cinturo-marron-hombre.png" class="card-img-top" alt="Cinturón de piel marrón">
+                <img src="../img/cinturo-marron-hombre.png" class="card-img-top" alt="Cinturón de piel marrón">
                 <div class="card-body">
                     <h5 class="card-title">Cinturón de piel marrón</h5>
                     <p class="card-text">Talla 32-54</p>
@@ -237,7 +237,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/cinturon-negro-hombre.png" class="card-img-top" alt="Cinturón de piel negro">
+                <img src="../img/cinturon-negro-hombre.png" class="card-img-top" alt="Cinturón de piel negro">
                 <div class="card-body">
                     <h5 class="card-title">Cinturón de piel negro</h5>
                     <p class="card-text">Talla 32-54</p>
@@ -247,7 +247,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/cinturon-verde-hombre.png" class="card-img-top" alt="Cinturón verde">
+                <img src="../img/cinturon-verde-hombre.png" class="card-img-top" alt="Cinturón verde">
                 <div class="card-body">
                     <h5 class="card-title">Cinturón verde</h5>
                     <p class="card-text">Talla 32-54</p>
@@ -261,7 +261,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/cartera-azul.png" class="card-img-top" alt="Cartera de piel azul">
+                <img src="../img/cartera-azul.png" class="card-img-top" alt="Cartera de piel azul">
                 <div class="card-body">
                     <h5 class="card-title">Cartera de piel azul</h5>
                     <p class="card-text">Talla M</p>
@@ -271,7 +271,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/cartera-negra.png" class="card-img-top" alt="Cartera de piel negra">
+                <img src="../img/cartera-negra.png" class="card-img-top" alt="Cartera de piel negra">
                 <div class="card-body">
                     <h5 class="card-title">Cartera de piel negra</h5>
                     <p class="card-text">Talla M</p>
@@ -281,7 +281,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="/img/cartera-marron.png" class="card-img-top" alt="Cartera de piel marrón">
+                <img src="../img/cartera-marron.png" class="card-img-top" alt="Cartera de piel marrón">
                 <div class="card-body">
                     <h5 class="card-title">Cartera de piel marrón</h5>
                     <p class="card-text">Talla M</p>
@@ -341,6 +341,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script src="/js/carrito.js"></script>
+    <script src="../js/carrito.js"></script>
 </body>
 </html>
