cambio a rutas relativas

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="tendencias mt-5 mb-5">
             <div class="card" style="width: 18rem;">
-                <img src="/img/vestido-gris.png" class="card-img-top" alt="Vestido de lana gris">
+                <img src="img/vestido-gris.png" class="card-img-top" alt="Vestido de lana gris">
                 <div class="card-body">
                     <h5 class="card-title">Vestido de lana gris</h5>
                     <p class="card-text">Talla S-M-L</p>
@@ -150,7 +150,7 @@
         <div id="nosotros">
             <p>En Loom, creemos que la moda es una forma de expresión. Ofrecemos ropa, calzado y complementos para hombre y mujer, combinando estilo, comodidad y calidad. Cada prenda está pensada para acompañarte en tu día a día y ayudarte a mostrar tu mejor versión.</p>
         
-            <img src="/img/nosotros.png" alt="Imagen de la persona empleada">
+            <img src="img/nosotros.png" alt="Imagen de la persona empleada">
         </div>
     </section>
     <!-- FIN SECCIÓN NOSOTROS -->
@@ -203,7 +203,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-    <script src="/js/carrito.js"></script>
+    <script src="js/carrito.js"></script>
 </body>
 
 </html>
