cambio a rutas relativas

--- a/web/contacto.html
+++ b/web/contacto.html
@@ -16,25 +16,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="/estilos/style.css">
-    <link rel="stylesheet" href="/estilos/contacto.css">
+    <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="../estilos/contacto.css">
     <title>Loom</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand ps-4" href="/index.html">LOOM</a>
+            <a class="navbar-brand ps-4" href="../index.html">LOOM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="/index.html
+                    <a class="nav-link" href="../index.html
                     ">Inicio</a>
-                    <a class="nav-link" href="/web/mujer.html">Mujer</a>
-                    <a class="nav-link" href="/web/hombre.html">Hombre</a>
-                    <a class="nav-link" href="/web/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../web/mujer.html">Mujer</a>
+                    <a class="nav-link" href="../web/hombre.html">Hombre</a>
+                    <a class="nav-link" href="../web/contacto.html">Contacto</a>
                 </div>
             </div>
             <i class="fa-solid fa-cart-shopping" onclick="mostrarCarrito()"></i>
@@ -192,7 +192,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script src="/js/carrito.js"></script>
-    <script src="/js/formulario.js"></script>
+    <script src="../js/carrito.js"></script>
+    <script src="../js/formulario.js"></script>
 </body>
 </html>
